--- a/index.html
+++ b/index.html
@@ -87,6 +87,56 @@
             <img class="portfolio-image" src="./umarwalima2.png" alt="Profile Image">
         </div>
     </section>
+<!-- skill portion -->
+<section class="container mx-auto py-12">
+    <h2 class="text-3xl font-bold text-center text-white mb-8">Skills</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div class="w-full bg-gray-800 rounded-lg p-4">
+            <h3 class="text-xl text-white mb-2">HTML & CSS</h3>
+            <div class="w-full bg-gray-700 rounded-full h-4">
+                <div class="bg-[#2C8282] h-4 text-center text-white" style="width: 90%">90%</div>
+            </div>
+        </div>
+        <div class="w-full bg-gray-800 rounded-lg p-4">
+            <h3 class="text-xl text-white mb-2">JavaScript & React</h3>
+            <div class="w-full bg-gray-700 rounded-full h-4">
+                <div class="bg-[#2C8282] h-4 text-center text-white" style="width: 85%">85%</div>
+            </div>
+        </div>
+        <div class="w-full bg-gray-800 rounded-lg p-4">
+            <h3 class="text-xl text-white mb-2">Java & Spring Boot</h3>
+            <div class="w-full bg-gray-700 rounded-full h-4">
+                <div class="bg-[#2C8282] h-4 text-center text-white" style="width: 80%">80%</div>
+            </div>
+        </div>
+    </section>
+
+<!-- projects section -->
+ <!-- Projects Section -->
+ <section class="container mx-auto py-12">
+    <h2 class="text-3xl font-bold text-white mb-8">Projects</h2>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+            <img class="w-full h-48 object-cover rounded-lg" src="./atm.jpg" alt="Project 1">
+            <h3 class="text-xl text-white mt-4">ATM Functionality System</h3>
+            <p class="text-sm">A Java-based ATM system with abstract classes and methods to perform transactions.</p>
+        </div>
+        
+        <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+            <img class="w-full h-48 object-cover" src="./fashiondesi.webp" alt="Project 2">
+            <h3 class="text-xl text-white">Fashion Designing Website</h3>
+            <p class="text-sm">A modern and stylish fashion website with an intuitive UI and UX.</p>
+        </div>
+        <div class="bg-gray-800 p-6 rounded-lg shadow-lg">
+            <img class="w-full h-48 object-cover" src="./foodpanda.png" alt="Project 3">
+            <h3 class="text-xl text-white">FoodPanda Clone App</h3>
+            <p class="text-sm">A food delivery app built using Java and React.</p>
+        </div>
+    </div>
+</section>
+
+
+
 <!-- footer -->
 
 <footer class="bg-gray-800 text-gray-400 py-6">
